
150324	Updated penctl.1 with the new command.

150322	New knob to tweak max number of pending nonblocking connection
	attempts: pending_max N (default 100).

150228	Moved dlist prototypes to dlist.h.

150227	Added check to close idle connections after a period of inactivity.
	Penctl: idle_timeout N (default 0 = never close idle connections).

150225	Moved git repository to GitHub..

150225	New feature: dummy server. Rather than acting as a proxy,
	Pen will pretend to be a web server with just barely enough
	functionality to work as a test target.
	Penctl: dummy|no dummy.

150224	Yet Another command: abort_on_error|no abort_on_error makes
	Pen call abort() (or not) when encountering a fatal error.

150224	New feature: "reliable idling". Pen will make and maintain a
	number of idle connections to the backend servers. When a connection
	closes, a new one is made (hence "reliable"). Penctl: idlers [N].

150223	In do_cmd: return diagnostics to penctl so the user can see them,
	instead of uselessly sending them to syslog.

150223	New penctl commands:
	socket N (print which connection the socket belongs to)
	connection N (print info on the specified connection)
	close N (forcibly close connection N)

150219	In open_listener: check that the requested port is in range.
	Fixed bug in dlist_insert.
	Released 0.27.1.

150215	Even load distribution when a server is unavailable.

150212	Let pen save the settings for tcp_nodelay and tcp_fastclose.
	Make flush_up and flush_down return the correct value on error.

150212	Added config.h.win with reasonable settings for Windows.
	Released 0.27.0.

150211	Better detection and blacklisting of unavailable servers.

150209	New penctl commands:
	tcp_nodelay sets TCP_NODELAY on sockets. Turn off with no tcp_nodelay.
	tcp_fastclose closes both upstream and downstream sockets if one of them
	closes theirs. Will take the values up, down, both or off (default).

150208	Rather than making a table of pending connections every time through